--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,68 +5,67 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-237.2KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇺🇸 美国-232.9KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.19MB/s(Youtube:不良林), server: 116.129.253.134, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.44MB/s(Youtube:不良林), server: 103.56.62.145, port: 3383, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.05MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
   - {name: 🇯🇵 日本-556.4KB/s(Youtube:不良林), server: 5.183.176.92, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 台湾-7.90MB/s(Youtube:不良林), server: 211.72.35.153, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-330.6KB/s(Youtube:不良林), server: 5.183.176.92, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇬🇧 英国-366.0KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇨🇳 台湾-8.13MB/s(Youtube:不良林), server: 211.72.35.153, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-266.9KB/s(Youtube:不良林), server: 5.183.176.92, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-430.5KB/s(Youtube:不良林), server: 5.183.176.92, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-526.4KB/s(Youtube:不良林), server: 5.183.176.92, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-349.2KB/s(Youtube:不良林), server: 5.183.176.92, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-4.14MB/s(Youtube:不良林), server: hlu.bgp2.liuliangzhuanfa.xyz, port: 45379, type: trojan, password: d73e7fe4-88d2-4d9a-81c8-c9a97bbc1b84, sni: hlu.bgp2.liuliangzhuanfa.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-3.03MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.35MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-237.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-232.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
       - 🇯🇵 日本-556.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.90MB/s(Youtube:不良林)
+      - 🇯🇵 日本-330.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-366.0KB/s(Youtube:不良林)
       - 🇨🇳 台湾-8.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-266.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-430.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-526.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-349.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-237.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-232.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
       - 🇯🇵 日本-556.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.90MB/s(Youtube:不良林)
+      - 🇯🇵 日本-330.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-366.0KB/s(Youtube:不良林)
       - 🇨🇳 台湾-8.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-266.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-430.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-526.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-349.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-237.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-232.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
       - 🇯🇵 日本-556.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.90MB/s(Youtube:不良林)
+      - 🇯🇵 日本-330.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-366.0KB/s(Youtube:不良林)
       - 🇨🇳 台湾-8.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-266.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-430.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-526.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-349.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-7.90MB/s(Youtube:不良林)
       - 🇨🇳 台湾-8.13MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
@@ -74,47 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-237.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-232.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
       - 🇯🇵 日本-556.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.90MB/s(Youtube:不良林)
+      - 🇯🇵 日本-330.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-366.0KB/s(Youtube:不良林)
       - 🇨🇳 台湾-8.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-266.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-430.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-526.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-349.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-237.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-232.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
       - 🇯🇵 日本-556.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.90MB/s(Youtube:不良林)
+      - 🇯🇵 日本-330.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-366.0KB/s(Youtube:不良林)
       - 🇨🇳 台湾-8.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-266.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-430.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-526.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-349.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-237.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-232.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
       - 🇯🇵 日本-556.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.90MB/s(Youtube:不良林)
+      - 🇯🇵 日本-330.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-366.0KB/s(Youtube:不良林)
       - 🇨🇳 台湾-8.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-266.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-430.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-526.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-349.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-237.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-232.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
       - 🇯🇵 日本-556.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.90MB/s(Youtube:不良林)
+      - 🇯🇵 日本-330.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-366.0KB/s(Youtube:不良林)
       - 🇨🇳 台湾-8.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-266.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-430.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-526.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-349.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
