--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.05MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-556.4KB/s(Youtube:不良林), server: 5.183.176.92, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-330.6KB/s(Youtube:不良林), server: 5.183.176.92, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇬🇧 英国-366.0KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 台湾-8.13MB/s(Youtube:不良林), server: 211.72.35.153, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-526.4KB/s(Youtube:不良林), server: 5.183.176.92, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-349.2KB/s(Youtube:不良林), server: 5.183.176.92, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-4.14MB/s(Youtube:不良林), server: hlu.bgp2.liuliangzhuanfa.xyz, port: 45379, type: trojan, password: d73e7fe4-88d2-4d9a-81c8-c9a97bbc1b84, sni: hlu.bgp2.liuliangzhuanfa.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-3.03MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.35MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-492.6KB/s(Youtube:不良林), server: 5.183.176.92, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇬🇧 英国-366.0KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-1.90MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇫🇷 法国-1.10MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇭🇰 香港-4.13MB/s(Youtube:不良林), server: 52.139.153.69, port: 166, type: vmess, uuid: 9838c9ee-b8b6-4ccd-aa42-30629e9cbee7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.03MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.16MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇷🇺 俄罗斯联邦-384.6KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇨🇳 中国-1.60MB/s(Youtube:不良林), server: 103.56.60.235, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-556.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-330.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-366.0KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-8.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-526.4KB/s(Youtube:不良林)
       - 🇯🇵 日本-349.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-492.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-366.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.10MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-384.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-556.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-330.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-366.0KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-8.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-526.4KB/s(Youtube:不良林)
       - 🇯🇵 日本-349.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-492.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-366.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.10MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-384.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-556.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-330.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-366.0KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-8.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-526.4KB/s(Youtube:不良林)
       - 🇯🇵 日本-349.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-492.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-366.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.10MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-384.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-8.13MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.13MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-556.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-330.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-366.0KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-8.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-526.4KB/s(Youtube:不良林)
       - 🇯🇵 日本-349.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-492.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-366.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.10MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-384.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-556.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-330.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-366.0KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-8.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-526.4KB/s(Youtube:不良林)
       - 🇯🇵 日本-349.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-492.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-366.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.10MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-384.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-556.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-330.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-366.0KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-8.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-526.4KB/s(Youtube:不良林)
       - 🇯🇵 日本-349.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-492.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-366.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.10MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-384.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-556.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-330.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-366.0KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-8.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-526.4KB/s(Youtube:不良林)
       - 🇯🇵 日本-349.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-492.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-366.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.10MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-384.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
