--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,117 +5,117 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 香港-4.13MB/s(Youtube:不良林), server: 52.139.153.69, port: 166, type: vmess, uuid: 9838c9ee-b8b6-4ccd-aa42-30629e9cbee7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.90MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-4.97MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.77MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-366.0KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-3.82MB/s(Youtube:不良林), server: hlu.bgp2.liuliangzhuanfa.xyz, port: 31097, type: trojan, password: 644c9b90-3bf9-4d95-a837-ce83c31ed839, sni: hlu.bgp2.liuliangzhuanfa.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.98MB/s(Youtube:不良林), server: hlu.bgp2.liuliangzhuanfa.xyz, port: 42167, type: trojan, password: 644c9b90-3bf9-4d95-a837-ce83c31ed839, sni: hlu.bgp2.liuliangzhuanfa.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.10MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.03MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.09MB/s(Youtube:不良林), server: hk3.leo222.com, port: 30001, type: ssr, cipher: chacha20-ietf, password: 0gIrPaom, protocol: auth_aes128_sha1, obfs: tls1.2_ticket_auth, protocol-param: 6509:ESKGKl, obfs-param: 2cff36509.microsoft.com}
+  - {name: 🇨🇳 中国-265.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.35MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
   - {name: 🇳🇱 荷兰-1.03MB/s(Youtube:不良林), server: 46.182.107.137, port: 443, type: vmess, uuid: 4ec0ae62-de09-4029-904a-0313d4628ecf, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/290016213035, ws-headers: {Host: 46.182.107.137}}
   - {name: 🇨🇳 台湾-1.39MB/s(Youtube:不良林), server: 211.72.35.153, port: 3389, type: trojan, password: cd39f62aed7b90f6, skip-cert-verify: true}
   - {name: 🇨🇳 台湾-2.36MB/s(Youtube:不良林), server: 211.72.35.153, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-3.31MB/s(Youtube:不良林), server: bpjcjapan.loseyourip.com, port: 12342, type: vmess, uuid: 546660e6-01ad-4eaa-a640-83864829f8f9, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /images, ws-headers: {Host: bpjcjapan.loseyourip.com}}
+  - {name: 🇬🇧 英国-2.04MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-4.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.77MB/s(Youtube:不良林)
-      - 🇬🇧 英国-366.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-265.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.03MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.39MB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.36MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.31MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.04MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 香港-4.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.77MB/s(Youtube:不良林)
-      - 🇬🇧 英国-366.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-265.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.03MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.39MB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.36MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.31MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.04MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-4.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.77MB/s(Youtube:不良林)
-      - 🇬🇧 英国-366.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-265.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.03MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.39MB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.36MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.31MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.04MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-4.13MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.39MB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.36MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.31MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 香港-4.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.77MB/s(Youtube:不良林)
-      - 🇬🇧 英国-366.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-265.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.03MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.39MB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.36MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.31MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.04MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 香港-4.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.77MB/s(Youtube:不良林)
-      - 🇬🇧 英国-366.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-265.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.03MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.39MB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.36MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.31MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.04MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-4.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.77MB/s(Youtube:不良林)
-      - 🇬🇧 英国-366.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-265.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.03MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.39MB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.36MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.31MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.04MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -131,16 +131,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-4.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.77MB/s(Youtube:不良林)
-      - 🇬🇧 英国-366.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-265.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.03MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.39MB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.36MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.31MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.04MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
